--- a/css/hero-style.css
+++ b/css/hero-style.css
@@ -8,14 +8,15 @@ h6 {
   margin-top: 0;
   margin-bottom: 0;
 }
-.container {
+.hero-container {
     width: 100%;
     max-width: 1350px;
     padding-left: 16px;
     padding-right: 16px;
     margin: 0 auto;
   }
-.hero{
+.hero-section{
+    
     display: flex;
     justify-content: center;
     margin: 0 auto;
@@ -25,6 +26,7 @@ h6 {
     background-image:url(../img/hero-product-mob-1.jpg);
 }
 .hero-titel{
+    text-transform: uppercase;
  margin-top: 140px;
     color: var(--blue-font, #0A224A);
 font-family: Playfair Display;
@@ -55,21 +57,21 @@ font-size: 16px;
 font-weight: 400;
 line-height: 1.50;
 }
-@media screen and (min-width: 375px) {
-    .container{
+/*@media screen and (min-width: 375px) {
+    .hero-container{
         max-width: 375px;
     }
     
 }
 @media screen and (min-width: 768px) {
-    .container{
+    .hero-container{
         max-width: 768px;
     }
-    .hero{
+    .hero-section{
     background-position: right bottom;
-   /* display: flex;
+    display: flex;
     justify-content: center;
-    margin: 0 auto;*/
+    margin: 0 auto;*
     width: 768px;
  background-repeat: no-repeat;
     background-image:url(../img/hero-product-tab-2.jpg);
@@ -87,7 +89,7 @@ font-family: Playfair Display;
 font-size: 50px;
 font-style: normal;
 font-weight: 400;
-line-height: 75px; /* 150% */
+line-height: 75px;  150% 
 text-transform: uppercase;
 }
 @media screen and (min-width: 1440px) {
@@ -95,4 +97,4 @@ text-transform: uppercase;
     .container{
         max-width: 1440px;
     }
-}
+}*/
