--- a/css/hero-style.css
+++ b/css/hero-style.css
@@ -69,26 +69,36 @@ h6 {
     max-width: 375px;
   }
 }
+*/
 @media screen and (min-width: 768px) {
-  .hero-container {
+  .hero-section {
+    /* background-position: right bottom;
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+        width: 768px;
+        background-repeat: no-repeat;
+        background-image: url(../img/hero-product-tab-2.jpg); */
     max-width: 768px;
   }
-  .hero-section {
-    background-position: right bottom;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-    width: 768px;
+  .hero-container {
+    background-color: aquamarine;
+    background-image: url(../img/hero-product-tab-1.jpg),
+      url(../img/hero-product-tab-2.jpg);
     background-repeat: no-repeat;
-    background-image: url(../img/hero-product-tab-2.jpg);
+    background-position: center left, top right;
+    background-size: auto;
   }
-  .hero-container-background {
+  .hero-titel {
+    margin-bottom: 410px;
+  }
+  /* .hero-container-background {
     width: 348px;
     height: 530px;
     background-position: bottom;
     background-repeat: no-repeat;
     background-image: url(../img/hero-product-tab-1.jpg);
-  }
+} */
 }
 .hero-titel {
   color: var(--blue-font, #0a224a);
@@ -99,8 +109,8 @@ h6 {
   line-height: 1.5;
   text-transform: uppercase;
 }
-@media screen and (min-width: 1440px) {
+/* @media screen and (min-width: 1440px) {
   .her-container {
     max-width: 1440px;
   }
-} */
+}  */
