--- a/css/hero-style.css
+++ b/css/hero-style.css
@@ -8,33 +8,29 @@ h6 {
   margin-top: 0;
   margin-bottom: 0;
 }
+* {
+  box-sizing: border-box;
+}
+body{
+margin: 0;
+}
+/*  */
+
 .hero-section {
-  /* display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  height: 717px;
-  width: 375px;
-  background-repeat: no-repeat;
-  background-image: url(../img/hero-product-mob-1.jpg); */
-  margin: 20px auto;
+    margin: 20px auto;
   max-width: 375px;
 }
 .hero-container {
-  /* width: 100%; */
-  /* max-width: 1350px; */
   background-image: url(../img/hero-product-mob-1.jpg);
+  background-color:lightgray  ;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  /* padding-left: 16px; */
-  /* padding-right: 16px;
-   */
   padding: 140px 14px 313px;
   margin: 0 auto;
 }
 .hero-titel {
   text-transform: uppercase;
-  /* margin-top: 140px; */
   width: 286px;
   color: var(--blue-font, #0a224a);
   font-family: Playfair Display;
@@ -45,7 +41,6 @@ h6 {
 }
 .hero-text {
   margin-bottom: 28px;
-  /* width: 343px; */
   color: var(--blue-font, #0a224a);
   font-family: Roboto;
   font-size: 16px;
@@ -64,53 +59,58 @@ h6 {
   font-weight: 400;
   line-height: 1.5;
 }
-/* @media screen and (min-width: 375px) {
-  .hero-container {
-    max-width: 375px;
-  }
-}
-*/
+
 @media screen and (min-width: 768px) {
-  .hero-section {
-    /* background-position: right bottom;
-        display: flex;
-        justify-content: center;
-        margin: 0 auto;
-        width: 768px;
-        background-repeat: no-repeat;
-        background-image: url(../img/hero-product-tab-2.jpg); */
+  .hero-section {  
     max-width: 768px;
+    padding: 0 32px;
   }
   .hero-container {
-    background-color: aquamarine;
+    margin: 0 auto;
+    padding: 0;
     background-image: url(../img/hero-product-tab-1.jpg),
       url(../img/hero-product-tab-2.jpg);
     background-repeat: no-repeat;
-    background-position: center left, top right;
+    background-position: top 202px left, top right;
     background-size: auto;
-  }
+  } 
+  
   .hero-titel {
     margin-bottom: 410px;
+    color: var(--blue-font, #0a224a);
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    text-transform: uppercase;
+    width: 100%;
   }
-  /* .hero-container-background {
-    width: 348px;
-    height: 530px;
-    background-position: bottom;
-    background-repeat: no-repeat;
-    background-image: url(../img/hero-product-tab-1.jpg);
-} */
+  .hero-text {
+    width: 312px;
+    margin-bottom: 30px;
+    font-size: 18px;
+  }
 }
-.hero-titel {
-  color: var(--blue-font, #0a224a);
-  font-family: Playfair Display;
-  font-size: 50px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5;
-  text-transform: uppercase;
-}
-/* @media screen and (min-width: 1440px) {
-  .her-container {
+@media screen and (min-width: 1440px) {
+  .hero-section {  
     max-width: 1440px;
+    padding: 0 60px;
   }
-}  */
+  .hero-container {
+    background-image: url(../img/hero-product-1.jpg),
+      url(../img/image.jpg), url(../img/hero-product-3.jpg);
+    background-repeat: no-repeat;
+    background-position: bottom left, center, top right;
+    background-size: auto;
+  } 
+  .hero-titel {
+    margin-bottom: 246px;
+    width: 648px;
+  }
+  .hero-container-text-btn {
+    width: 312px;
+    margin: 0 0 0 auto;
+  }
+  
+
+} 
