--- a/css/hero-style.css
+++ b/css/hero-style.css
@@ -14,7 +14,18 @@ h6 {
 body {
   margin: 0;
 }
-/*  */
+:root {
+  --primary-font: 'Roboto', sans-serif;
+  --hero-title-font: 'Playfair Display', sans-serif;
+  --sapphire-main-cl: #0a224a;
+  --hover-darkblue-cl: #061835;
+  --grey-cl: #7a7a7a;
+  --darkgrey-cl: #b6b6b6;
+  --lightgrey-cl: #d9d9d9;
+  --lightblue-cl: #f7faff;
+  --white-cl: #fff;
+  --cinnabar-cl: #e74a3b;
+}
 
 .hero-section {
   margin: 20px auto;
