--- a/css/hero-style.css
+++ b/css/hero-style.css
@@ -15,8 +15,8 @@ body {
   margin: 0;
 }
 :root {
-  --primary-font: 'Roboto', sans-serif;
-  --hero-title-font: 'Playfair Display', sans-serif;
+  --primary-font: "Roboto", sans-serif;
+  --hero-title-font: "Playfair Display", sans-serif;
   --sapphire-main-cl: #0a224a;
   --hover-darkblue-cl: #061835;
   --grey-cl: #7a7a7a;
@@ -147,4 +147,122 @@ body {
     width: 312px;
     margin: 0 0 0 auto;
   }
+}
+/*===== section =====*/
+ul,
+ol {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+
+.footer {
+  background-color: #0a224a;
+
+  margin: 0 auto;
+}
+.container-footer {
+  margin: 0 auto;
+  padding: 16px;
+}
+/*.container-footer-social-list {
+  height: 28px;
+  display: flex;
+  align-items: baseline;
+}
+.footer-social-list {
+  gap: 16px;
+  display: flex;
+  margin-left: auto;
+  list-style: none;
+}
+.footer-section-list {
+  display: contents;
+  list-style: none;
+}*/
+/*.container-footer-sections-list {
+  margin-top: 36px;
+}
+.footer-sections-list {
+  flex-direction: column;
+  flex-wrap: wrap;
+  display: flex;
+  gap: 8px;
+  padding: unset;
+  list-style: none;
+  margin: auto;
+}*/
+.footer-sections-link {
+  color: var(--white, #fff);
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+}
+.container-footer-adress-list {
+  margin-top: 36px;
+}
+/*.footer-adress-list {
+  gap: 8px;
+  padding: unset;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+}*/
+.footer-adress-text {
+  color: var(--white, #fff);
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.16px;
+}
+/*.container-footer-tel-list {
+  margin-top: 36px;
+}
+.footer-tel-list {
+  list-style: none;
+  padding: unset;
+  margin: unset;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}*/
+.footer-tel-link {
+  color: var(--white, #fff);
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.02em;
+}
+/*.container-footer-link-policy {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-top: 64px;
+}*/
+.footer-link-policy {
+  text-align: center;
+  color: var(--white, #fff);
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+}
+.container-minimal-link {
+  color: var(--white, #fff);
+  font-family: Roboto;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.19px;
 }
