--- a/css/hero-style.css
+++ b/css/hero-style.css
@@ -271,7 +271,7 @@ ol {
     max-height: 310px;
     flex-wrap: wrap;
     row-gap: 0;
-    column-gap: 178px;
+    column-gap: 120px;
   }
   .footer-container-main {
     font-size: 19px;
@@ -279,13 +279,27 @@ ol {
   }
   .footer-menu-list {
     line-height: 1.5;
-    font-size: 18px;
     gap: 16px;
     order: 1;
+  }
+  .footer-menu-link {
+    font-size: 18px;
+  }
+  .footer-link-social {
+    display: block;
+    width: 40px;
+    height: 40px;
+  }
+  .footer-social-svg {
+    width: 100%;
+    height: 100%;
   }
   .footer-logo {
     padding: 10px 0 0;
     margin-bottom: 32px;
+  }
+  .footer-logo-svg {
+    width: 127px;
   }
 
   .footer-adress-list {
@@ -304,9 +318,44 @@ ol {
     display: block;
   }
   .footer-link-policy {
-    font-size: 19px;
+    font-size: 16px;
+    letter-spacing: 1.188px;
   }
 }
 
 @media screen and (min-width: 1440px) {
+  .footer {
+    max-width: 1440px;
+    padding: 36px 60px;
+  }
+  .footer-container-main {
+    margin-bottom: 35px;
+  }
+  .container-footer {
+    row-gap: 24px;
+    flex-direction: row;
+    column-gap: 0;
+  }
+  .footer-logo {
+    margin: 0 209px 0 0;
+  }
+  .footer-social-list {
+    gap: 30px;
+  }
+  .footer-container-main {
+    gap: 286px;
+  }
+
+  .footer-adress-list {
+    margin: 0 87px 0 0;
+  }
+  .footer-tel-link {
+    margin: 0 82px 0 0;
+  }
+  .footer-menu-list {
+    order: 0;
+    flex-direction: row;
+    gap: 30px;
+    padding: 8px;
+  }
 }
