--- a/css/hero-style.css
+++ b/css/hero-style.css
@@ -162,12 +162,16 @@ ol {
   margin-top: 0;
   margin-bottom: 0;
 }
+.blue {
+  background-color: #0a224a;
+}
 .footer {
   font-family: var(--primary-font);
-  max-width: 375px;
   background-color: var(--sapphire-main-cl);
   margin: 0 auto;
   padding: 36px 16px 16px;
+}
+.gf {
 }
 .footer-container-main {
   margin-bottom: 64px;
@@ -235,14 +239,13 @@ ol {
 }
 
 .footer-link-policy {
-  padding: 0 16px;
   text-align: center;
   color: var(--white, #fff);
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
   line-height: 1.16;
-  letter-spacing: 0.19px;
+  letter-spacing: 1.188px;
   opacity: 0.6;
 }
 .footer-link-policy a {
